--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
                     </div>
                     <div class="macos-download">
                         <div class="button" id="macos-download">
-                            <i class="fab fa-apple"></i> Download <span class="version"></span> (.deb)
+                            <i class="fab fa-apple"></i> Download <span class="version"></span> (.dmg)
                         </div>
                     </div>
                 </div>
